# cert-expiry-watch

./: .gitignore  README.md  pyproject.toml
src/cert_expiry_watch/: __init__.py  __main__.py  cli.py  collector.py  formatter.py  models.py  targets.py
tests/: test_formatter.py  test_models.py  test_targets.py
