[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cert-expiry-watch"
version = "0.1.0"
description = "A fast CLI for checking TLS certificate expiry across domains."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Mertefe Kurt" }
]
keywords = ["tls", "ssl", "certificate", "monitoring", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Monitoring",
]

[project.scripts]
cert-expiry-watch = "cert_expiry_watch.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"
